--- a/src/ECommerceBackend.Web/EmailTemplates/OrderedProducts.html
+++ b/src/ECommerceBackend.Web/EmailTemplates/OrderedProducts.html
@@ -6,7 +6,7 @@
         <tr>
             <th style='border-bottom:1px solid #000;' align='left' valign='top'>Product</th>
             <th style='border-bottom:1px solid #000; border-left:1px solid #000;' align='left' valign='top'>Description</th>
-            <th style='border-bottom:1px solid #000; border-left:1px solid #000;' align='right' valign='top'>Quantity</th>
+            <th style='border-bottom:1px solid #000; border-left:1px solid #000;' align='right' valign='top'>Price</th>
         </tr>
     </thead>
     <tbody>
